changed some layout issues

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -115,8 +115,9 @@ h2 {
 }
 .main {
 	width: 706px;
-	height: 500px;
-	margin: 0 auto;
+	margin: 0px auto;
+	position: relative;
+
 }
 .bluebox {
 	border: 1px solid #ccc;
@@ -310,4 +311,22 @@ fieldset>#send {
 {
 	text-align: right;
 	font-style:italic;
+}
+
+.question
+{
+  font-weight: bold;
+  margin: 5px;
+  padding: 2px;
+}
+
+.answer
+{
+  margin: 2px;
+  padding: 2px;	
+}
+
+ul
+{
+	margin-left: 30px;
 }
